<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#FFFFFF">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginBottom="30dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_arrow_back_ios"
            app:tint="@color/black"/> <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/app_language"
        android:gravity="center"
        android:fontFamily="@font/poppins_bold"
        android:textSize="18sp"
        android:textColor="#333"/>
    </LinearLayout>

    <TextView
        android:text="@string/choose_language"
        android:fontFamily="@font/poppins_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <RadioGroup
        android:id="@+id/rg_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_indo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bahasa Indonesia"
            android:padding="12dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_edittext"
            android:buttonTint="#111D5E"/>

        <RadioButton
            android:id="@+id/rb_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="English"
            android:padding="12dp"
            android:background="@drawable/bg_edittext"
            android:buttonTint="#111D5E"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/btn_apply"
        android:layout_marginTop="30dp"
        android:backgroundTint="#111D5E"/>
</LinearLayout>